--- a/common/data.tex
+++ b/common/data.tex
@@ -1,7 +1,7 @@
 %%% Основные сведения %%%
-\newcommand{\thesisAuthorLastName}{\fixme{Фамилия}}
-\newcommand{\thesisAuthorOtherNames}{\fixme{Имя Отчество}}
-\newcommand{\thesisAuthorInitials}{\fixme{И.\,О.}}
+\newcommand{\thesisAuthorLastName}{Хилькевич}
+\newcommand{\thesisAuthorOtherNames}{Евгений Михайлович}
+\newcommand{\thesisAuthorInitials}{Е.\,М.}
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
     \texorpdfstring{% \texorpdfstring takes two arguments and uses the first for (La)TeX and the second for pdf
@@ -15,46 +15,44 @@
 %\newcommand{\thesisUdk}                % Диссертация, УДК
 %{\fixme{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\fixme{Длинное название диссертационной работы, состоящее из~достаточно большого
-количества слов, совсем длинное длинное длинное длинное название, из~которого
-простому обывателю знакомы, в~лучшем случае, лишь отдельные слова}}
+{Восстановление распределений убегающих электронов в~плазме токамаков JET и ASDEX Upgrade
+по измеренному жесткому рентгеновскому излучению}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
-{\fixme{XX.XX.XX}}
+{01.04.08}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название (название взято с сайта ВАК для примера)
-{\fixme{Технология обработки, хранения и~переработки злаковых, бобовых культур,
-крупяных продуктов, плодоовощной продукции и~виноградарства}}
+{Физика плазмы}
 %% \newcommand{\thesisSpecialtyTwoNumber} % Диссертация, вторая специальность, номер
 %% {\fixme{XX.XX.XX}}
 %% \newcommand{\thesisSpecialtyTwoTitle}  % Диссертация, вторая специальность, название
 %% {\fixme{Теория и~методика физического воспитания, спортивной тренировки,
 %% оздоровительной и~адаптивной физической культуры}}
 \newcommand{\thesisDegree}             % Диссертация, ученая степень
-{\fixme{кандидата физико-математических наук}}
+{кандидата физико-математических наук}
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
-{\fixme{канд. физ.-мат. наук}}
+{канд. физ.-мат. наук}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
-{\fixme{Город}}
+{Санкт-Петербург}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
 {\the\year}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{\fixme{Федеральное государственное автономное образовательное учреждение высшего
-образования <<Длинное название образовательного учреждения <<АББРЕВИАТУРА>>}}
+{Федеральное государственное бюджетное учреждение науки
+Физико-технический институт им. А.Ф.~Иоффе Российской академии наук}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
-{\fixme{НазУчДисРаб}}
+{ФТИ им. А.Ф. Иоффе}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
-{\fixme{учреждении с~длинным длинным длинным длинным названием, в~котором
-выполнялась данная диссертационная работа}}
+{федеральном государственном бюджетном учреждении науки
+<<Физико-технический институт им. А.Ф.~Иоффе Российской академии наук>>}
 
 %% \newcommand{\supervisorDead}{}           % Рисовать рамку вокруг фамилии
 \newcommand{\supervisorFio}              % Научный руководитель, ФИО
-{\fixme{Фамилия Имя Отчество}}
+{Шевелев Александр Евгеньевич}
 \newcommand{\supervisorRegalia}          % Научный руководитель, регалии
-{\fixme{уч. степень, уч. звание}}
+{кандидат физико-математических наук}
 \newcommand{\supervisorFioShort}         % Научный руководитель, ФИО
-{\fixme{И.\,О.~Фамилия}}
+{А.\,Е.~Шевелев}
 \newcommand{\supervisorRegaliaShort}     % Научный руководитель, регалии
-{\fixme{уч.~ст.,~уч.~зв.}}
+{к. ф.-м. н.}
 
 %% \newcommand{\supervisorTwoDead}{}        % Рисовать рамку вокруг фамилии
 %% \newcommand{\supervisorTwoFio}           % Второй научный руководитель, ФИО
@@ -94,8 +92,8 @@
 %% {\fixme{старший научный сотрудник}}
 
 \newcommand{\leadingOrganizationTitle} % Ведущая организация, дополнительные строки. Удалить, чтобы не отображать в автореферате
-{\fixme{Федеральное государственное бюджетное образовательное учреждение высшего
-профессионального образования с~длинным длинным длинным длинным названием}}
+{Федеральное государственное бюджетное образовательное учреждение высшего
+профессионального образования с~длинным длинным длинным длинным названием}
 
 \newcommand{\defenseDate}              % Защита, дата
 {\fixme{DD mmmmmmmm YYYY~г.~в~XX часов}}
