Введение частично написано

--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,50 +1,24 @@
 
-{\actuality} Обзор, введение в тему, обозначение места данной работы в
-мировых исследованиях и~т.\:п., можно использовать ссылки на~другие
-работы~\autocite{Gosele1999161,Lermontov}
-(если их~нет, то~в~автореферате
-автоматически пропадёт раздел <<Список литературы>>). Внимание! Ссылки
-на~другие работы в~разделе общей характеристики работы можно
-использовать только при использовании \verb!biblatex! (из-за технических
-ограничений \verb!bibtex8!. Это связано с тем, что одна
-и~та~же~характеристика используются и~в~тексте диссертации, и в
-автореферате. В~последнем, согласно ГОСТ, должен присутствовать список
-работ автора по~теме диссертации, а~\verb!bibtex8! не~умеет выводить в~одном
-файле два списка литературы).
-При использовании \verb!biblatex! возможно использование исключительно
-в~автореферате подстрочных ссылок
-для других работ командой \verb!\autocite!, а~также цитирование
-собственных работ командой \verb!\cite!. Для этого в~файле
-\verb!common/setup.tex! необходимо присвоить положительное значение
-счётчику \verb!\setcounter{usefootcite}{1}!.
+{\actuality}
 
-Для генерации содержимого титульного листа автореферата, диссертации
-и~презентации используются данные из файла \verb!common/data.tex!. Если,
-например, вы меняете название диссертации, то оно автоматически
-появится в~итоговых файлах после очередного запуска \LaTeX. Согласно
-ГОСТ 7.0.11-2011 <<5.1.1 Титульный лист является первой страницей
-диссертации, служит источником информации, необходимой для обработки и
-поиска документа>>. Наличие логотипа организации на~титульном листе
-упрощает обработку и~поиск, для этого разметите логотип вашей
-организации в папке images в~формате PDF (лучше найти его в векторном
-варианте, чтобы он хорошо смотрелся при печати) под именем
-\verb!logo.pdf!. Настроить размер изображения с логотипом можно
-в~соответствующих местах файлов \verb!title.tex!  отдельно для
-диссертации и автореферата. Если вам логотип не~нужен, то просто
-удалите файл с~логотипом.
+Неотъемлемой особенностью токамака как системы удержания плазмы является то, что ограниченная плазма должна пропускать значительный ток, а соответствующая магнитная энергия больше, чем кинетическая энергия частиц, несущих ток. Объемные электроны являются носителями тока в термоядерной плазме при номинальных условиях, однако скорость электронного потока намного меньше, чем тепловые скорости электронов. Однако при некоторых условиях происходит так что небольшая популяция электронов с высокой надтепловой температурой становится значительным или даже доминирующим носителем тока. Основная причина такого явления заключается в том, что сила трения для быстрых электронов уменьшается с увеличением скорости. Электроны могут при этом претерпевать неограниченное ускорение электрическим полем; находящиеся в таком режиме электроны называют убегающими. Убегающие электроны (УЭ) долгое время были предметом пристального внимания в исследованиях плазмы как по академическим, так и по практическим причинам. Они могут вызывать пробой газа в сильных электрических полях, в том числе при атмосферных молниях, они могут присутствовать в событиях магнитного перезамыкания и могут генерироваться намеренно для создания пучков электронов высокой энергии. Многие аспекты физики электронного пучка и взаимодействия пучка с плазмой естественным образом относятся к поведению УЭ. Одним из таких аспектов является возбуждение волн быстрыми электронами либо в форме спонтанного нетеплового излучения, либо в виде вынужденного излучения, ведущего к электронным неустойчивостям \autocite{Breizman2019}.
 
-\ifsynopsis
-Этот абзац появляется только в~автореферате.
-Для формирования блоков, которые будут обрабатываться только в~автореферате,
-заведена проверка условия \verb!\!\verb!ifsynopsis!.
-Значение условия задаётся в~основном файле документа (\verb!synopsis.tex! для
-автореферата).
-\else
-Этот абзац появляется только в~диссертации.
-Через проверку условия \verb!\!\verb!ifsynopsis!, задаваемого в~основном файле
-документа (\verb!dissertation.tex! для диссертации), можно сделать новую
-команду, обеспечивающую появление цитаты в~диссертации, но~не~в~автореферате.
-\fi
+Столкновительные процессы для убегающих электронов играют намного меньшую роль, чем для основной массы электронов плазмы, поэтому их распределение по энергии существенно отличается от максвелловского. Ещё ранние теоретические исследования установили два механизма возникновения убегающих электронов: уход электронов из максвелловского хвоста в зону убегания и вторичные столкновения, которые увеличивают популяцию убегающих электронов в геометрической прогрессии. Убегающие электроны повсеместно присутствуют в плазме во время электрического пробоя газа в самом начале разряда, но их ток обычно остается относительно небольшим к тому времени, когда плазма нагревается и становится хорошим проводником, после чего они постепенно тк или иначе исчезают. Завершение разряда в штатных режимах работы обычно не вызывает повторного рождения убегающих электронов, однако если время отключения должно быть очень коротким в аварийной ситуации, то убегающие электроны во время гашения разряда становятся уже достаточно многочисленны (\autocite{Breizman2019}). На токамаке JET ток УЭ в процессе срыва может достигать значений 1~МА и выше и составлять 70\% и выше от полного тока по плазме \autocite{Smith2006}. На более крупных токамаках, таких как ИТЭР, следует ожидать ещё больших значений величины тока УЭ; так, согласно данным численного моделирования, величина тока УЭ на токамаке ИТЭР в некоторых сценариях может превышать 10~МА \autocite{Smith2006}. При этом пучок убегающих электронов может повреждать конструктивные элементы термоядерных реакторов (\autocite{Bazylev2011}, рисунок \cref{fig:electrons-wall}).
+
+\begin{figure}[ht]
+  \centerfloat{ \includegraphics[width=0.80\linewidth]{electrons-wall} }
+  \caption{ Повреждения внутренней стенки токамака JET пучком убегающих электронов (\autocite{Matthews2016}).}
+  \label{fig:electrons-wall}
+\end{figure}
+
+В более крупных токамаках, таких как ИТЭР, токи и энергии пучка убегающих электронов будут ещё выше. Так, согласно требованиям к диагностике убегающих электронов, возможные значения энергии составляют до 100~МэВ, а значения тока - до 70\% от полного тока по плазме \autocite{Donne2007}. 
+
+Эмиссия тормозного излучения --- один из наиболее широко используемых диагностических инструментов для диагностики убегающих электронов в токамаках \autocite{Breizman2019,Knoepfel1979}. Замедляясь в веществе, убегающие электроны генерируют тормозное излучение, энергия которого приходится на диапазон от дисятков кэВ до десятков МэВ и выше \autocite{Shevelev2014}. Тормозное излучение от УЭ может быть объемным тормозным излучением <<тонкой мишени>>, когда УЭ рассеивается ионами плазмы, или тормозным излучением <<толстой мишени>>, когда УЭ сталкиваются с материалами камеры токамака, обращенными к плазме. Объемная эмиссия доминирует, когда УЭ хорошо удерживаются, тогда как поверхностное тормозное излучение преобладает во время быстрого выхода УЭ на внутреннюю поверхность токамака в связи с МГД неустойчивостями, или если линия обзора спектрометра пересекает лимитер, а так же в некоторых других случаях \autocite{Breizman2019}. 
+
+Тормозное излучение убегающих электронов может быть зарегистрированно с помощью сцинтилляционных детекторов, таких как NaI(Ti), BGO, LaBr3(Ce). От детекторов требуется регистрировать излучение в большом диапазоне энергий (от десятков-сотен кэВ и до дестятков МэВ), а так же с работать в том числе с высокой скоростью счёта (до $10^5$ -- $10^6$ c${}^-1$ и выше); дететоры должны работать в магнитных полях. На крупных токамаках, таких как ИТЭР, так же присутствуют и другие факторы: высокая температура и нейтронные поля в местах установки детекторов рентгеновского излучения. Зарегистрированный спектр рентгеновского излучения сложным образом зависит от функции распределения электронов, генерирующих излучение, от параметров конструктивных элементов, находящихся между источником излучения и детектором, а так же от аппаратной функции самого детектора. Таким образом, определение параметров пучка убегающих электронов и восстановление их функции распределения по энергии представляет собой непростую задау. 
+
+Большие токамаки, такие как JET и ASDEX Upgrade, представляют собой несомненный интерес в плане изучения убегающих электронов. В отличие от малых токамаков, в больших установках есть возможность регистрировать тормозное рентгеновское излучение не от взаимодействия пучка электронов со стенкой (то есть от уже покинувших объём плазмы), а непосредственно из плазмы, что позволяет исследовать эволюцию пучка во времени. Кроме того, крупные установки являются хорошим испытательным стендом для отработки методик, которые могут быть применены на будущих крупных токамаках, таких как ИТЭР.
+
 
 % {\progress}
 % Этот раздел должен быть отдельным структурным элементом по
@@ -52,14 +26,15 @@
 % темы. Нужен он отдельным структурынм элемементом или нет ---
 % смотрите другие диссертации вашего совета, скорее всего не нужен.
 
-{\aim} данной работы является \ldots
+
+{\aim} данной работы является развитие и практическое применение методов гамма-спектрометрии для исследования характеристик убегающих электронов в плазме токамаков.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
-  \item Исследовать, разработать, вычислить и~т.\:д. и~т.\:п.
+  \item Развить методы обработки сигналов гамма-спектроскопии, полученных в ходе измерений спектров жесткого рентгеновского излучения в плазменных экспериментах, с целью уменьшения числа просчётов (мёртвого времени) и увеличения стабильности измеряемого сигнала. Реализовать разработанные методы в программном коде;
+  \item Разработать методы восстановления функции распределения убегающих электронов по измеренному спектру рентгеновского излучения. Реализовать разработанные методы в программном коде;
+  \item Разработать гамма-спектрометр на основе детектора LaBr3(Ce) для диагностики убегающих электронов на токамаке ASDEX Upgrade;
+  \item Исследовать с помощью методов гамма-спетрометрии поведение убегающих электронов на токамаках JET и Asdex Upgrade.
 \end{enumerate}
 
 
@@ -72,7 +47,7 @@
 
 {\influence} \ldots
 
-{\methods} \ldots
+{\methods} 
 
 {\defpositions}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
