--- a/biblio/external.bib
+++ b/biblio/external.bib
@@ -256,6 +256,95 @@
 
 
 % Examples from https://verbosus.com/bibtex-style-examples.html
+
+@ARTICLE{Breizman2019,
+  author = {{Breizman}, Boris N. and {Aleynikov}, Pavel and {Hollmann}, Eric M. and {Lehnen}, Michael},
+  title = "{Physics of runaway electrons in tokamaks}",
+  journal = {Nuclear Fusion},
+  keywords = {thermal quench, runaway avalanche, current quench, hot tail, disruption mitigation},
+  year = 2019,
+  month = aug,
+  volume = {59},
+  number = {8},
+  eid = {083001},
+  pages = {083001},
+  doi = {10.1088/1741-4326/ab1822},
+  adsurl = {https://ui.adsabs.harvard.edu/abs/2019NucFu..59h3001B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Matthews2016,
+  doi = {10.1088/0031-8949/t167/1/014070},
+  url = {https://doi.org/10.1088/0031-8949/t167/1/014070},
+  year = 2016,
+  month = {jan},
+  publisher = {{IOP} Publishing},
+  volume = {T167},
+  pages = {014070},
+  author = {G F Matthews and B Bazylev and A Baron-Wiechec and J Coenen and K Heinola and V Kiptily and H Maier and C Reux and V Riccardo and F Rimini and G Sergienko and V Thompson and A Widdowson and},
+  title = {Melt damage to the {JET} {ITER}-like Wall and divertor},
+  journal = {Physica Scripta}
+}
+
+@article{Smith2006,
+  title={Runaway electrons and the evolution of the plasma current in tokamak disruptions},
+  author={H{\aa}kan Smith and Per Helander and Lars-Goran Eriksson and Dan Anderson and Mietek Lisak and F. Andersson},
+  journal={Physics of Plasmas},
+  year={2006},
+  volume={13},
+  pages={102502}
+}
+
+@article{Bazylev2011,
+  title = {Modeling of runaway electron beams for JET and ITER},
+  journal = {Journal of Nuclear Materials},
+  volume = {415},
+  number = {1, Supplement },
+  pages = {S841-S844},
+  year = {2011},
+  note = {Proceedings of the 19th International Conference on Plasma-Surface Interactions in Controlled Fusion},
+  issn = {0022-3115},
+  doi = {https://doi.org/10.1016/j.jnucmat.2010.11.086},
+  url = {https://www.sciencedirect.com/science/article/pii/S0022311510007944},
+  author = {B. Bazylev and G. Arnoux and W. Fundamenski and Yu. Igitkhanov and M. Lehnen}
+}
+
+@article{Knoepfel1979,
+  doi = {10.1088/0029-5515/19/6/008},
+  url = {https://doi.org/10.1088/0029-5515/19/6/008},
+  year = 1979,
+  month = {jun},
+  publisher = {{IOP} Publishing},
+  volume = {19},
+  number = {6},
+  pages = {785--829},
+  author = {H. Knoepfel and D.A. Spong},
+  title = {Runaway electrons in toroidal discharges},
+  journal = {Nuclear Fusion}
+}
+
+@article{Shevelev2014,
+  author = {Shevelev, Alexander and Kiptily, Vasily and Chugunov, I. and Khilkevitch, E. and Gin, Dmitry and Doinikov, D. and Naidenov, V. and Plyusnin, Vladislav},
+  year = {2014},
+  month = {08},
+  pages = {125-128},
+  title = {Study of runaway electrons with Hard X-ray spectrometry of tokamak plasmas},
+  volume = {1612},
+  journal = {AIP Conference Proceedings},
+  doi = {10.1063/1.4894038}
+}
+
+@article{Donne2007,
+  author = {Donne, A. and Costley, Alan and Barnsley, Robin and Bindslev, H. and Boivin, R. and Conway, G. and Fisher, R. and Giannella, R. and Hartfuss, H. and Von Hellermann, Manfred and Hodgson, Eric and Ingesson, L.C. and Itami, Kiyoshi and Johnson, David and Kawano, Y. and Kondoh, T. and Krasilnikov, A. and Kusama, Y. and Litnovsky, Andrey and Diagnostics, the},
+  year = {2007},
+  month = {06},
+  pages = {S337},
+  title = {Chapter 7: Diagnostics},
+  volume = {47},
+  journal = {Nuclear Fusion},
+  doi = {10.1088/0029-5515/47/6/S07}
+}
+
 @ARTICLE{Article,
   author   = {Peter Adams},
   title    = {The title of the work},
