Добавлены все работы

--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -1,3 +1,332 @@
+
+@ARTICLE{Reux2022,
+  doi = {10.1088/1361-6587/ac48bc},
+  url = {https://doi.org/10.1088/1361-6587/ac48bc},
+  year = 2022,
+  month = {feb},
+  publisher = {{IOP} Publishing},
+  volume = {64},
+  number = {3},
+  pages = {034002},
+  author = {C Reux and C Paz-Soldan and N Eidietis and M Lehnen and P Aleynikov and S Silburn and V Bandaru and O Ficker and M Hoelzl and E M Hollmann and S Jachmich and E Joffrin and P J Lomas and F Rimini and L Baylor and A Bleasdale and L Calacci and F Causa and D Carnevale and I Coffey and D Craven and A Dal Molin and E de la Luna and G De Tommasi and J Garcia and T Gebhart and L Giacomelli and A Huber and E Khilkevich and C Lowry and E Macusova and A Manzanares and M Nocente and E Panontin and G Papp and G Pautasso and A Peacock and V Plyusnin and A Shevelev and D Shiraki and C Sommariva and C Sozzi and S Sridhar and R Sweeney and G Szepesi and R A Tinguely and J Wilson},
+  title = {Physics of runaway electrons with shattered pellet injection at {JET}},
+  journal = {Plasma Physics and Controlled Fusion},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@ARTICLE{Panontin2021,
+  doi = {10.1088/1748-0221/16/12/c12005},
+  url = {https://doi.org/10.1088/1748-0221/16/12/c12005},
+  year = 2021,
+  month = {dec},
+  publisher = {{IOP} Publishing},
+  volume = {16},
+  number = {12},
+  pages = {C12005},
+  author = {E. Panontin and A. Dal Molin and M. Nocente and G. Croci and J. Eriksson and L. Giacomelli and G. Gorini and M. Iliasova and E. Khilkevitch and A. Muraro and D. Rigamonti and M. Salewski and J. Scionti and A. Shevelev and M. Tardocchi},
+  title = {Comparison of unfolding methods for the inference of runaway electron energy distribution from $\upgamma$-ray spectroscopic measurements},
+  journal = {Journal of Instrumentation},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@ARTICLE{Nocente2019,
+  doi = {10.1088/1361-6587/ab4f32},
+  url = {https://doi.org/10.1088/1361-6587/ab4f32},
+  year = 2019,
+  month = {nov},
+  publisher = {{IOP} Publishing},
+  volume = {62},
+  number = {1},
+  pages = {014015},
+  author = {M Nocente and A Dal Molin and N Eidietis and L Giacomelli and G Gorini and Y Kazakov and E Khilkevitch and V Kiptily and M Iliasova and A Lvovskiy and M Mantsinen and A Mariani and E Panontin and G Papp and G Pautasso and C Paz-Soldan and D Rigamonti and M Salewski and A Shevelev and M Tardocchi and   and   and},
+  title = {{MeV} range pARTICLE physics studies in tokamak plasmas using gamma-ray spectroscopy},
+  journal = {Plasma Physics and Controlled Fusion},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@ARTICLE{Bakharev2020,
+  author = { Бахарев, Н. Н. and Балаченков, И. М. and Варфоломеев, В. И. and Воронин, А. В. and Гусев, В. К. and Дьяченко, В. В. and Ильясова, М. В. and Киселев, Е. О. and Коновалов, А. Н. and Курскиев, Г. С. and Мельник, А. Д. and Минаев, В. Б. and Мирошников, И. В. and Новохацкий, А. Н. and Патров, М. И. and Петров, Ю. В. and Сахаров, Н. В. and Скрекель, О. М. and Тельнова, А. Ю. and Токарев, В. А. and Толстяков, С. Ю. and Тюхменева, Е. А. and Хилькевич, Е. М. and Хромов, Н. А. and Чернышев, Ф. В. and Чугунов, И. Н. and Шевелев, А. Е. and Щеголев, П. Б.},
+  addendum = {(ВАК, WoS)},
+  title = {Результаты первых экспериментов на токамаке Глобус-М2},
+  journal = {Физика плазмы},
+  year = {2020},
+  volume = {46},
+  number = {7},
+  pages = {579--587},
+  language = {russian},
+  authorvak = {true},
+  authorwos = {true},
+}
+
+@ARTICLE{Khilkevitch2020,
+  title = {Advanced algorithms for signal processing scintillation gamma ray detectors at high counting rates},
+  journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume = {977},
+  pages = {164309},
+  year = {2020},
+  issn = {0168-9002},
+  doi = {https://doi.org/10.1016/j.nima.2020.164309},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168900220307051},
+  author = {E.M. Khilkevitch and A.E. Shevelev and I.N. Chugunov and M.V. Iliasova and D.N. Doinikov and D.B. Gin and V.O. Naidenov and I.A. Polunovsky},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@article{Shevelev2017,
+  doi = {10.1088/1741-4326/aa8cea},
+  url = {https://doi.org/10.1088/1741-4326/aa8cea},
+  year = 2017,
+  month = {nov},
+  publisher = {{IOP} Publishing},
+  volume = {58},
+  number = {1},
+  pages = {016034},
+  author = {A.E. Shevelev and E.M. Khilkevitch and S.I. Lashkul and V.V. Rozhdestvensky and S.P. Pandya and V.V. Plyusnin and A.B. Altukhov and D.V. Kouprienko and I.N. Chugunov and D.N. Doinikov and L.A. Esipov and D.B. Gin and M.V. Iliasova and V.O. Naidenov and I.A. Polunovsky and A.V. Sidorov and V.G. Kiptily},
+  title = {Runaway electron studies with hard x-ray and microwave diagnostics in the {FT}-2 lower hybrid current drive discharges},
+  journal = {Nuclear Fusion},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@article{Plyusnin2017,
+  doi = {10.1088/1741-4326/aa8f05},
+  url = {https://doi.org/10.1088/1741-4326/aa8f05},
+  year = 2017,
+  month = {nov},
+  publisher = {{IOP} Publishing},
+  volume = {58},
+  number = {1},
+  pages = {016014},
+  author = {V.V. Plyusnin and C. Reux and V.G. Kiptily and G. Pautasso and J. Decker and G. Papp and A. Kallenbach and V. Weinzettl and J. Mlynar and S. Coda and V. Riccardo and P. Lomas and S. Jachmich and A.E. Shevelev and B. Alper and E. Khilkevitch and Y. Martin and R. Dux and C. Fuchs and B. Duval and M. Brix and G. Tardini and M. Maraschek and W. Treutterer and L. Giannone and A. Mlynek and O. Ficker and P. Martin and S. Gerasimov and S. Potzel and R. Paprok and P. J. McCarthy and M. Imrisek and A. Boboc and K. Lackner and A. Fernandes and J. Havlicek and L. Giacomelli and M. Vlainic and M. Nocente and U. Kruezi and   and   and   and   and},
+  title = {Comparison of runaway electron generation parameters in small, medium-sized and large tokamaks{\textemdash}A survey of experiments in {COMPASS}, {TCV}, {ASDEX}-Upgrade and {JET}},
+  journal = {Nuclear Fusion},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@article{Shevelev2018,
+  doi = {10.1088/1361-6587/aac0d5},
+  url = {https://doi.org/10.1088/1361-6587/aac0d5},
+  year = 2018,
+  month = {may},
+  publisher = {{IOP} Publishing},
+  volume = {60},
+  number = {7},
+  pages = {075009},
+  author = {A Shevelev and E Khilkevitch and A Tukachinsky and S Pandya and L Askinazi and A Belokurov and I Chugunov and D Doinikov and D Gin and M Iliasova and V Kiptily and V Kornev and S Lebedev and V Naidenov and V Plyusnin and I Polunovsky and N Zhubr},
+  title = {Study of runaway electrons in {TUMAN}-3M tokamak plasmas},
+  journal = {Plasma Physics and Controlled Fusion},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@article{Nocente2018,
+  author = {Nocente,M.  and Shevelev,A.  and Giacomelli,L.  and Pautasso,G.  and Tardocchi,M.  and Gin,D.  and Gobbin, M.  and Gorini,G.  and Fernandes,A.  and Herrmann,A.  and Khilkevitch,E.  and Panontin,E.  and Papp,G.  and Pereira,R. C.  and Salewski,M.  and Tardini,G.  and Valisa,M. },
+  title = {High resolution gamma-ray spectrometer with MHz capabilities for runaway electron studies at ASDEX Upgrade},
+  journal = {Review of Scientific Instruments},
+  volume = {89},
+  number = {10},
+  pages = {10I124},
+  year = {2018},
+  doi = {10.1063/1.5036658},
+  URL = {https://doi.org/10.1063/1.5036658},
+  eprint = {https://doi.org/10.1063/1.5036658},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@ARTICLE{Tukachinsky2016,
+  author = { Тукачинский, .А С. and Аскинази, Л. Г. and Балаченков, И. М. and Белокуров, А. А. and Гин, Д. Б. and Жубр, Н. А. and Корнев, В. А. and Лебедев, С. В. and Хилькевич, Е. М. and Чугунов, И. Н. and Шевелев, А. Е. },
+  addendum = {(ВАК, WoS)},
+  title = {Альфвеновские колебания в омических разрядах с убегающими электронами в токамаке ТУМАН-3М},
+  journal = {Письма ЖТФ},
+  year = {2016},
+  volume = {42},
+  number = {24},
+  pages = {72--78},
+  language = {russian},
+  authorvak = {true},
+  authorwos = {true},
+  authorscopus = {true},
+}
+
+@ARTICLE{Nersesyan2016,
+  author = { Нерсесян, Н. С. and Шевелев, А. Е. and Чугунов, И. Н. and Хилькевич, Е. М. and Гин, Д. Б. and Полуновский, И. А.  and Дойников, Д. Н. and Найденов, В. О. and Городков, И. В. },
+  addendum = {(ВАК, WoS)},
+  title = {Альфвеновские колебания в омических разрядах с убегающими электронами в токамаке ТУМАН-3М},
+  journal = {Письма ЖТФ},
+  year = {2016},
+  volume = {42},
+  number = {24},
+  pages = {72--78},
+  language = {russian},
+  authorvak = {true},
+  authorwos = {true},
+  authorscopus = {true},
+}
+
+
+@article{Shevelev2016,
+  title = {High performance gamma-ray spectrometer for runaway electron studies on the FT-2 tokamak},
+  journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume = {830},
+  pages = {102-108},
+  year = {2016},
+  issn = {0168-9002},
+  doi = {https://doi.org/10.1016/j.nima.2016.05.075},
+  url = {https://www.sciencedirect.com/science/article/pii/S0168900216304685},
+  author = {A.E. Shevelev and E.M. Khilkevitch and S.I. Lashkul and V.V. Rozhdestvensky and A.B. Altukhov and I.N. Chugunov and D.N. Doinikov and L.A. Esipov and D.B. Gin and M.V. Iliasova and V.O. Naidenov and N.S. Nersesyan and I.A. Polunovsky and A.V. Sidorov and V.G. Kiptily},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+
+@article{Askinazi2015,
+  doi = {10.1088/0029-5515/55/10/104013},
+  url = {https://doi.org/10.1088/0029-5515/55/10/104013},
+  year = 2015,
+  month = {jul},
+  publisher = {{IOP} Publishing},
+  volume = {55},
+  number = {10},
+  pages = {104013},
+  author = {L.G. Askinazi and V.I. Afanasyev and A.B. Altukhov and N.N. Bakharev and A.A. Belokurov and V.V. Bulanin and A.S. Bykov and F.V. Chernyshev and I. Chugunov and V.V. Dyachenko and L.A. Esipov and D. Gin and P.R. Goncharov and A.D. Gurchenko and E.Z. Gusakov and V.K. Gusev and S. Heuraux and A.D. Iblyaminova and M.A. Irzak and M.Yu. Kantor and E.G. Kaveeva and T. Kiviniemi and E.M. Khilkevitch and S.A. Khitrov and N.A. Khromov and V.A. Kornev and D.V. Kouprienko and G.S. Kurskiev and S.I. Lashkul and S.V. Lebedev and S. Leerink and A.D. Melnik and V.B. Minaev and M.I. Mironov and I.V. Miroshnikov and E.E. Mukhin and V.G. Nesenevich and P. Niskala and A.N. Novokhatsky and M.I. Patrov and A.A. Perevalov and M.P. Petrov and A.V. Petrov and Yu.V. Petrov and A.Yu. Popov and V.A. Rozhansky and V.V. Rozhdestvenskiy and N.V. Sakharov and A.N. Saveliev and I.Yu. Senichenkov and V.Yu. Sergeev and P.B. Shchegolev and S.V. Shatalin and O.N. Shcherbinin and A.E. Shevelev and A.V. Sidorov and F. da Silva and A.I. Smirnov and A.Yu. Stepanov and E.V. Sysoeva and N.V. Teplova and S.Yu. Tolstyakov and A.S. Tukachinsky and V.I. Varfolomeev and E.O. Vekshina and M.I. Vildjunas and A.V. Voronin and S.P. Voskoboinikov and F. Wagner and A.Yu. Yashin and N.A. Zhubr},
+  title = {Fusion Research in Ioffe Institute},
+  journal = {Nuclear Fusion},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+
+@article{Reux2015,
+  title = {Runaway beam studies during disruptions at JET-ILW},
+  journal = {Journal of Nuclear Materials},
+  volume = {463},
+  pages = {143-149},
+  year = {2015},
+  note = {PLASMA-SURFACE INTERACTIONS 21},
+  issn = {0022-3115},
+  doi = {https://doi.org/10.1016/j.jnucmat.2014.10.002},
+  url = {https://www.sciencedirect.com/science/article/pii/S0022311514006850},
+  author = {C. Reux and V. Plyusnin and B. Alper and D. Alves and B. Bazylev and E. Belonohy and S. Brezinsek and J. Decker and S. Devaux and P. {de Vries} and A. Fil and S. Gerasimov and I. Lupelli and S. Jachmich and E.M. Khilkevitch and V. Kiptily and R. Koslowski and U. Kruezi and M. Lehnen and A. Manzanares and J. Mlynář and E. Nardon and E. Nilsson and V. Riccardo and F. Saint-Laurent and A.E. Shevelev and C. Sozzi},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+
+@article{Reux2015_Mit,
+  doi = {10.1088/0029-5515/55/9/093013},
+  url = {https://doi.org/10.1088/0029-5515/55/9/093013},
+  year = 2015,
+  month = {aug},
+  publisher = {{IOP} Publishing},
+  volume = {55},
+  number = {9},
+  pages = {093013},
+  author = {C. Reux and V. Plyusnin and B. Alper and D. Alves and B. Bazylev and E. Belonohy and A. Boboc and S. Brezinsek and I. Coffey and J. Decker and P. Drewelow and S. Devaux and P.C. de Vries and A. Fil and S. Gerasimov and L. Giacomelli and S. Jachmich and E.M. Khilkevitch and V. Kiptily and R. Koslowski and U. Kruezi and M. Lehnen and I. Lupelli and P.J. Lomas and A. Manzanares and A. Martin De Aguilera and G.F. Matthews and J. Mlyn{\'{a}}{\v{r}} and E. Nardon and E. Nilsson and C. Perez von Thun and V. Riccardo and F. Saint-Laurent and A.E. Shevelev and G. Sips and C. Sozzi and},
+  title = {Runaway electron beam generation and mitigation during disruptions at {JET}-{ILW}},
+  journal = {Nuclear Fusion},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+
+@article{Shevelev2014,
+  author = {Shevelev,A.  and Kiptily,V.  and Chugunov,I.  and Khilkevitch,E.  and Gin,D.  and Doinikov,D.  and Naidenov,V.  and Plyusnin,V.  and EFDA-JET contributors},
+  title = {Study of runaway electrons with Hard X-ray spectrometry of tokamak plasmas},
+  journal = {AIP Conference Proceedings},
+  volume = {1612},
+  number = {1},
+  pages = {125-128},
+  year = {2014},
+  doi = {10.1063/1.4894038},
+  URL = { https://aip.scitation.org/doi/abs/10.1063/1.4894038},
+  eprint = {https://aip.scitation.org/doi/pdf/10.1063/1.4894038},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@article{Gin2014,
+  author = {Gin,D.  and Chugunov,I.  and Shevelev,A.  and Khilkevitch,E.  and Doinikov,D.  and Naidenov,V.  and Pasternak,A.  and Polunovsky,I.  and Kiptily,V. },
+  title = {Gamma ray spectrometer for ITER},
+  journal = {AIP Conference Proceedings},
+  volume = {1612},
+  number = {1},
+  pages = {149-152},
+  year = {2014},
+  doi = {10.1063/1.4894043},
+  URL = { https://aip.scitation.org/doi/abs/10.1063/1.4894043},
+  eprint = { https://aip.scitation.org/doi/pdf/10.1063/1.4894043},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@article{Shevelev2013,
+  doi = {10.1088/0029-5515/53/12/123004},
+  url = {https://doi.org/10.1088/0029-5515/53/12/123004},
+  year = 2013,
+  month = {nov},
+  publisher = {{IOP} Publishing},
+  volume = {53},
+  number = {12},
+  pages = {123004},
+  author = {A.E. Shevelev and E.M. Khilkevitch and V.G. Kiptily and I.N. Chugunov and D.B. Gin and D.N. Doinikov and V.O. Naidenov and A.E. Litvinov and I.A. Polunovskii and},
+  title = {Reconstruction of distribution functions of fast ions and runaway electrons in fusion plasmas using gamma-ray spectrometry with applications to {ITER}},
+  journal = {Nuclear Fusion},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
+@ARTICLE{Khilkevitch2013,
+  author = {Хилькевич, Е. М. and Шевелев, А. Е. and Чугунов, И. Н. and Найденов, В. О. and Гин, Д. Б. and Дойников, Д. Н. },
+  addendum = {(ВАК, WoS, Scopus)},
+  title = {Применение методов деконволюции к спектрам гамма-излучения термоядерной плазмы},
+  journal = {Письма ЖТФ},
+  year = {2013},
+  volume = {39},
+  number = {1},
+  pages = {19--27},
+  language = {russian},
+  authorvak = {true},
+  authorwos = {true},
+  authorscopus = {true},
+}
+
+@article{Chugunov2011,
+  doi = {10.1088/0029-5515/51/8/083010},
+  url = {https://doi.org/10.1088/0029-5515/51/8/083010},
+  year = 2011,
+  month = {jul},
+  publisher = {{IOP} Publishing},
+  volume = {51},
+  number = {8},
+  pages = {083010},
+  author = {I.N. Chugunov and A.E. Shevelev and D.B. Gin and V.G. Kiptily and G. Gorini and M. Nocente and M. Tardocchi and D.N. Doinikov and V.O. Naidenov and E.M. Khilkevitch},
+  title = {Development of gamma-ray diagnostics for {ITER}},
+  journal = {Nuclear Fusion},
+  authorscopus = {true},
+  authorwos = {true},
+  addendum = {(Scopus, WoS)},
+}
+
 @inproceedings{confbib1,
   author = {Фамилия, И. О.},
   title = {название тезисов конференции},
