--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -17,7 +17,7 @@
 
 Тормозное излучение убегающих электронов может быть зарегистрированно с помощью сцинтилляционных детекторов, таких как NaI(Ti), BGO, LaBr3(Ce). От детекторов требуется регистрировать излучение в большом диапазоне энергий (от десятков-сотен кэВ и до дестятков МэВ), а так же с работать в том числе с высокой скоростью счёта (до $10^5$ -- $10^6$ c${}^-1$ и выше); дететоры должны работать в магнитных полях. На крупных токамаках, таких как ИТЭР, так же присутствуют и другие факторы: высокая температура и нейтронные поля в местах установки детекторов рентгеновского излучения. Зарегистрированный спектр рентгеновского излучения сложным образом зависит от функции распределения электронов, генерирующих излучение, от параметров конструктивных элементов, находящихся между источником излучения и детектором, а так же от аппаратной функции самого детектора. Таким образом, определение параметров пучка убегающих электронов и восстановление их функции распределения по энергии представляет собой непростую задау. 
 
-Большие токамаки, такие как JET и ASDEX Upgrade, представляют собой несомненный интерес в плане изучения убегающих электронов. В отличие от малых токамаков, в больших установках есть возможность регистрировать тормозное рентгеновское излучение не от взаимодействия пучка электронов со стенкой (то есть от уже покинувших объём плазмы), а непосредственно из плазмы, что позволяет исследовать эволюцию пучка во времени. Кроме того, крупные установки являются хорошим испытательным стендом для отработки методик, которые могут быть применены на будущих крупных токамаках, таких как ИТЭР.
+Большие токамаки, такие как JET и ASDEX Upgrade, представляют собой несомненный интерес в плане изучения убегающих электронов. В отличие от малых токамаков, в больших установках есть возможность регистрировать тормозное рентгеновское излучение не от взаимодействия пучка электронов со стенкой (то есть от уже покинувших объём плазмы), а непосредственно из плазмы, что позволяет исследовать эволюцию пучка во времени. Кроме того, крупные установки являются хорошим испытательным стендом для отработки методик, которые могут быть применены на будущих крупных токамаках, таких как ИТЭР. 
 
 
 % {\progress}
@@ -37,30 +37,38 @@
   \item Исследовать с помощью методов гамма-спетрометрии поведение убегающих электронов на токамаках JET и Asdex Upgrade.
 \end{enumerate}
 
+\textbf{Объект исследования:} убегающие электроны в плазме токамаков с энергией от 0.2~МэВ до 30~МэВ.
 
 {\novelty}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Впервые \ldots
-  \item Впервые \ldots
-  \item Было выполнено оригинальное исследование \ldots
+  \item Развиты и реализованы в программном коде методы цифровой обработки сигналов, позволяющие осуществлять измерения спектра гамма и рентгеновского излучения с сцинтиляционных детекторов на основе кристаллов LaBr${}_3$(Ce) при скорости счётра 10${}^7$ и выше;
+  \item Развиты и реализованы в программном коде методы восстановления функции распределения убегающих электронов по энергии на основе спектров излучения, зарегистрированных с помощью сцинтиляционных детекторов;
+  \item Про детектор на ASDEX;
+  \item Про выводы на токамаках Jet, Asdex.
 \end{enumerate}
 
-{\influence} \ldots
+{\influence}\begin{enumerate}[beginpenalty=10000]
+  \item Создан программный код DeGaSum, в котором были реализованы разработанные методы обратоки сигналов с детекторов, а так же методы восстановления функции распределения убегающих электронов. Данный код  применяется при обработке экспериментальных данных на токамаках JET, Asdex Upgrade, а так же Глобус-М2, Туман-3М, ФТ-2;
+  \item Разработан гамма спектрометр на основе детектора LaBr3(Ce), который применялся для диагностики убегающих электронов на токамаке ASDEX Upgrade;
+  \item Разработанные методики обработки гамма и рентгеновского излучения могут быть применены на токамаках нового поколения, включая ИТЭР и ТРТ.
+\end{enumerate}
 
 {\methods} 
 
 {\defpositions}
 \begin{enumerate}[beginpenalty=10000] % https://tex.stackexchange.com/a/476052/104425
-  \item Первое положение
-  \item Второе положение
-  \item Третье положение
-  \item Четвертое положение
+  \item Методы цифровой обработки и амплитудного анализа сигнала сцинтилляционного гамма-детектора с использованием процедуры разделения наложенных импульсов реализованы в программном коде;
+  \item Разработаны и реализованы в программном коде алгоритмы восстановления энергетического распределения быстрых (убегающих) электронов по измеренному жесткому рентгеновскому излучению из плазмы токамаков;
+  \item Разработан гамма-спектрометр на основе детектора LaBr3(Ce) для диагностики убегающих электронов на токамаке ASDEX Upgrade;
+  \item Получены результаты исследования эволюции максимальной энергии убегающих электронов по спектрам жесткого рентгеновского излучения в разрядах с массивной газовой инжекцией на токамаках ASDEX Upgrade и JET;
+  \item Получены результаты исследования эволюции максимальной энергии и тока убегающих электронов по спектрам жесткого рентгеновского излучения на стадии подъема тока на токамаке JET.
 \end{enumerate}
-В папке Documents можно ознакомиться с решением совета из Томского~ГУ
-(в~файле \verb+Def_positions.pdf+), где обоснованно даются рекомендации
-по~формулировкам защищаемых положений.
 
-{\reliability} полученных результатов обеспечивается \ldots \ Результаты находятся в соответствии с результатами, полученными другими авторами.
+%В папке Documents можно ознакомиться с решением совета из Томского~ГУ
+%(в~файле \verb+Def_positions.pdf+), где обоснованно даются рекомендации
+%по~формулировкам защищаемых положений.
+
+% {\reliability} полученных результатов обеспечивается \ldots \ Результаты находятся в соответствии с результатами, полученными другими авторами.
 
 
 {\probation}
@@ -98,7 +106,10 @@
         \printbibliography[heading=nobibheading, section=1, env=countauthorvakscopuswos, filter=vakscopuswos]%
         \printbibliography[heading=nobibheading, section=1, env=countauthorscopuswos,    filter=scopuswos]%
         %
-        \nocite{*}%
+        \nocite{*}
+        %\nocite{Reux2022}
+        %\nocite{Panontin2021}
+
         %
         {\publications} Основные результаты по теме диссертации изложены в~\arabic{citeauthor}~печатных изданиях,
         \arabic{citeauthorvak} из которых изданы в журналах, рекомендованных ВАК\sloppy%
@@ -139,11 +150,16 @@
         % Процитированные здесь работы:
         %  * попадают в авторскую библиографию, при usefootcite==0 и стиле `\insertbiblioauthorimportant`.
         %  * ни на что не влияют в противном случае
-        \nocite{vakbib2}%vak
-        \nocite{patbib1}%patent
-        \nocite{progbib1}%program
-        \nocite{bib1}%other
-        \nocite{confbib1}%conf
+        %\nocite{*}
+        %\insertbiblioauthor
+        %\nocite{Reux2022}
+        %\nocite{Panontin2021}
+        %\nocite{vakbib2}%vak
+        %\nocite{patbib1}%patent
+        %\nocite{progbib1}%program
+        %\nocite{bib1}%other
+        %\nocite{confbib1}%conf
+
     \end{refsection}%
         %
         % Всё, что вне этих двух refsection, это refsection=0,
@@ -151,36 +167,9 @@
         %  * для автореферата:
         %     * при usefootcite==0, ссылка корректно сработает только для источника из `external.bib`. Для своих работ --- напечатает "[0]" (и даже Warning не вылезет).
         %     * при usefootcite==1, ссылка сработает нормально. В авторской библиографии будут только процитированные в refsection=0 работы.
+     %\nocite{*}
+     %\nocite{Reux2022}
+     %\nocite{Panontin2021}
 }
 
-При использовании пакета \verb!biblatex! будут подсчитаны все работы, добавленные
-в файл \verb!biblio/author.bib!. Для правильного подсчёта работ в~различных
-системах цитирования требуется использовать поля:
-\begin{itemize}
-        \item \texttt{authorvak} если публикация индексирована ВАК,
-        \item \texttt{authorscopus} если публикация индексирована Scopus,
-        \item \texttt{authorwos} если публикация индексирована Web of Science,
-        \item \texttt{authorconf} для докладов конференций,
-        \item \texttt{authorpatent} для патентов,
-        \item \texttt{authorprogram} для зарегистрированных программ для ЭВМ,
-        \item \texttt{authorother} для других публикаций.
-\end{itemize}
-Для подсчёта используются счётчики:
-\begin{itemize}
-        \item \texttt{citeauthorvak} для работ, индексируемых ВАК,
-        \item \texttt{citeauthorscopus} для работ, индексируемых Scopus,
-        \item \texttt{citeauthorwos} для работ, индексируемых Web of Science,
-        \item \texttt{citeauthorvakscopuswos} для работ, индексируемых одной из трёх баз,
-        \item \texttt{citeauthorscopuswos} для работ, индексируемых Scopus или Web of~Science,
-        \item \texttt{citeauthorconf} для докладов на конференциях,
-        \item \texttt{citeauthorother} для остальных работ,
-        \item \texttt{citeauthorpatent} для патентов,
-        \item \texttt{citeauthorprogram} для зарегистрированных программ для ЭВМ,
-        \item \texttt{citeauthor} для суммарного количества работ.
-\end{itemize}
-% Счётчик \texttt{citeexternal} используется для подсчёта процитированных публикаций;
-% \texttt{citeregistered} "--- для подсчёта суммарного количества патентов и программ для ЭВМ.
 
-Для добавления в список публикаций автора работ, которые не были процитированы в
-автореферате, требуется их~перечислить с использованием команды \verb!\nocite! в
-\verb!Synopsis/content.tex!.
