--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -10,6 +10,9 @@
 Одна ссылка: \cite[с.~54]{Sokolov}\cite[с.~36]{Gaidaenko}.
 Две ссылки: \cite{Sokolov,Gaidaenko}.
 Ссылка на собственные работы: \cite{vakbib1, confbib2}.
+
+МОИ ССЫЛКИ: \cite{Khilkevitch2020} \cite{Reux2015}
+
 Много ссылок: %\cite[с.~54]{Lermontov,Management,Borozda} % такой «фокус»
 %вызывает biblatex warning относительно опции sortcites, потому что неясно, к
 %какому источнику относится уточнение о страницах, а bibtex об этой проблеме
