Вроде бы разобрался с патентами и прочим

--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -42,7 +42,7 @@
   volume = {62},
   number = {1},
   pages = {014015},
-  author = {M Nocente and A Dal Molin and N Eidietis and L Giacomelli and G Gorini and Y Kazakov and E Khilkevitch and V Kiptily and M Iliasova and A Lvovskiy and M Mantsinen and A Mariani and E Panontin and G Papp and G Pautasso and C Paz-Soldan and D Rigamonti and M Salewski and A Shevelev and M Tardocchi and   and   and},
+  author = {M Nocente and A Dal Molin and N Eidietis and L Giacomelli and G Gorini and Y Kazakov and E Khilkevitch and V Kiptily and M Iliasova and A Lvovskiy and M Mantsinen and A Mariani and E Panontin and G Papp and G Pautasso and C Paz-Soldan and D Rigamonti and M Salewski and A Shevelev and M Tardocchi},
   title = {{MeV} range pARTICLE physics studies in tokamak plasmas using gamma-ray spectroscopy},
   journal = {Plasma Physics and Controlled Fusion},
   authorscopus = {true},
@@ -105,7 +105,7 @@
   volume = {58},
   number = {1},
   pages = {016014},
-  author = {V.V. Plyusnin and C. Reux and V.G. Kiptily and G. Pautasso and J. Decker and G. Papp and A. Kallenbach and V. Weinzettl and J. Mlynar and S. Coda and V. Riccardo and P. Lomas and S. Jachmich and A.E. Shevelev and B. Alper and E. Khilkevitch and Y. Martin and R. Dux and C. Fuchs and B. Duval and M. Brix and G. Tardini and M. Maraschek and W. Treutterer and L. Giannone and A. Mlynek and O. Ficker and P. Martin and S. Gerasimov and S. Potzel and R. Paprok and P. J. McCarthy and M. Imrisek and A. Boboc and K. Lackner and A. Fernandes and J. Havlicek and L. Giacomelli and M. Vlainic and M. Nocente and U. Kruezi and   and   and   and   and},
+  author = {V.V. Plyusnin and C. Reux and V.G. Kiptily and G. Pautasso and J. Decker and G. Papp and A. Kallenbach and V. Weinzettl and J. Mlynar and S. Coda and V. Riccardo and P. Lomas and S. Jachmich and A.E. Shevelev and B. Alper and E. Khilkevitch and Y. Martin and R. Dux and C. Fuchs and B. Duval and M. Brix and G. Tardini and M. Maraschek and W. Treutterer and L. Giannone and A. Mlynek and O. Ficker and P. Martin and S. Gerasimov and S. Potzel and R. Paprok and P. J. McCarthy and M. Imrisek and A. Boboc and K. Lackner and A. Fernandes and J. Havlicek and L. Giacomelli and M. Vlainic and M. Nocente and U. Kruezi},
   title = {Comparison of runaway electron generation parameters in small, medium-sized and large tokamaks{\textemdash}A survey of experiments in {COMPASS}, {TCV}, {ASDEX}-Upgrade and {JET}},
   journal = {Nuclear Fusion},
   authorscopus = {true},
